...
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/check_box_3state_selector"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tr_gen_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="Track"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
...
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>

