...
        <item>@string/soil8soft</item>
        <item>@string/soil9middle</item>
        <item>@string/soil10mud</item>
        <item>@string/soil11dust</item>
    </string-array>
    <string-array name="status_list">
        <item>@string/open</item>
        <item>@string/closed_season</item>
        <item>@string/closed_notyet</item>
        <item>@string/closed</item>
        <item>@string/closed_temp</item>
    </string-array>
    <string-array name="access_keylist">
...
