<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layoutPoiHeaderMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_selector"
    android:baselineAligned="false"
...
